ubah jadi hahahah

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                     Greetings, I'm Dheo Putranta Pandia, but you can call me Dheepss. Currently, I'm pursuing my education with a major in Information Systems. While I'm still in the early stages of my journey into the fascinating realms of machine learning and data science, my passion for learning in these fields knows no bounds.
+                    hahahah 
                     <br>
                     <br>
                     In my quest to grasp the intricacies of these subjects, I've become quite familiar with essential tools like Python, Git, and SQL. They have been indispensable companions in my exploration of the exciting world of data and algorithms.
